--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
 			name="description"
 			content="Childcare Waterloo IA, Daycare Cedar Falls, Sugarbaby's Childcare, early education Waterloo, preschool, infant care"
 		/>
+		<meta
+			name="google-site-verification"
+			content="QGi_MFfPbNs6OLTyXC2GZMfy_l9tHRYk-ccySWNN_d8"
+		/>
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 		<!--
       manifest.json provides metadata used when your web app is installed on a
